🐛 FIX: word-spacing

--- a/source/css/_common/components/post/post-body.styl
+++ b/source/css/_common/components/post/post-body.styl
@@ -2,7 +2,7 @@
   if $font-family-posts is defined
     font-family: $font-family-posts;
   word-wrap();
-  word-spacing: -.22em;
+  // word-spacing: -.22em;
 
   +desktop-large() {
     font-size: $font-size-large;
