--- a/source/css/_common/scaffolding/highlight/index.styl
+++ b/source/css/_common/scaffolding/highlight/index.styl
@@ -52,7 +52,7 @@ pre, code {
 code {
   @extend $code-inline;
   border-radius: 3px;
-  word-spacing: normal;
+  // word-spacing: normal;
   // font-size: $table-font-size;
   padding: 2px 4px;
   word-wrap();
